# clarity

./: LICENSE  README.md  clarity.opam
lib/: clarity.ml  heap.ml  heap.mli  jbuild  list.ml  list.mli  map.ml  map.mli  ordered.mli  set.ml  set.mli  tree.ml  tree.mli
test/: heaps.ml  jbuild  lists.ml  maps.ml  sets.ml  test.ml
